- document glpSetAutoCheckErrors (#44)
- croak if auto-glewInit fails (#43 #36)
- update to GLEW 2.1.0 which captures OpenGL 4.6
- minimum Perl 5.16

0.04     2017-08-06 12:06:13-04:00
- Add module to allow OpenGL::Image to work with OpenGL::Modern
- Add error checking and glpSetAutoCheckErrors to control
- Various fixes to make app-shadertoy work with OpenGL::Modern
- New tests and perltidy support

0.03     2017-02-25 17:08:07-05:00
- Use Devel::CheckLib to generate NA for missing libraries
- Fix automatic calls for glewInit() and done_glewInit()
- Implement accessor function for GLEW_* state variables
- Now builds on Mac OS X

0.02_03  2017-02-25 15:47:35-05:00
- final check before 0.03 release
- use Devel::CheckLib to generate NA on missing libs
- fix implementation of done_glewInit()

0.02_02  2017-02-20 09:20:17-05:00
- Fix bad code generated for GLEW_* variable accessors

0.02_01  2017-02-19 11:18:52-05:00
- Implemented accessor routines for GLEW_VERSION_N_M and others
- fixes for Travis-CI integration
- more conditions for tests to skip
- MacOSX fixes for build

0.02     2017-02-12 09:10:44-05:00
- First offical release of OpenGL::Modern

0.01_10  2017-02-11 12:44:57-05:00
- Added done_glewInit() to determine if glewInit() has been called
- Automatically call glewInit() if not called (doesn't handle context check)
- new tests and cleanup re perltidy

0.01_09  2017-02-08 10:00:50-05:00
- Update prerequisite modules in Makefile.PL

0.01_08  2017-02-08 09:46:18-05:00
- Run perltidy on "messy" files
- add helpers needed for microidium (#31)
- deduplicate info log calls in Helpers
- apply system-specific pack semantics to pointer sizes
- prevent generate xs from aborting when generated files don't exist (#28)
- don't put info output on the STDERR channel (#29)
- remove autoloader (#27)
- add perltidy test (optional, purely for informative purposes) (#13)
- Add SKIP for glewCreateContext not returing GLEW_OK

0.01_07  2017-02-06 18:06:40-05:00