@@ -3,6 +3,7 @@
 ^pogl_implemented
 ^signatures
 ^utils/XS_generate_NOTES.txt
+^lib/OpenGL/Modern/Config\.pm$
 ^.git
 ^xt/
 \.sw.$
